--- a/com.TestLeaf/test-output/emailable-report.html
+++ b/com.TestLeaf/test-output/emailable-report.html
@@ -8,27 +8,34 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">TestLeafSuite</th></tr>
-<tr><td><a href="#t0">TestCases</a></td><td class="num">12</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,795</td><td>Button, Edit</td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Check Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,630</td><td>Check</td><td>Edit</td></tr>
-<tr><th>Total</th><th class="num">14</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">10,425</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Failed suite [TestLeafSuite]</th></tr>
+<tr><td><a href="#t0">TestCases(failed)</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">26,189</td><td>ALL</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestLeafSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestCases &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">TestCases.ButtonPage_Test</td><td><a href="#m0">Navi_ClickButton</a></td><td rowspan="1">1574071193357</td><td rowspan="1">572</td></tr><tr class="passedeven"><td><a href="#m1">Test07_CheckGotoHomeButton</a></td><td rowspan="1">1574071194095</td><td rowspan="1">97</td></tr><tr class="passedeven"><td><a href="#m2">Test08_GetPosition</a></td><td rowspan="1">1574071193994</td><td rowspan="1">45</td></tr><tr class="passedeven"><td><a href="#m3">Test09_GetColor</a></td><td rowspan="1">1574071194042</td><td rowspan="1">49</td></tr><tr class="passedeven"><td><a href="#m4">Test10_GetSize</a></td><td rowspan="1">1574071193936</td><td rowspan="1">56</td></tr><tr class="passedodd"><td rowspan="7">TestCases.EditPage_Test</td><td><a href="#m5">Navi_ClickEdit</a></td><td rowspan="1">1574071194432</td><td rowspan="1">865</td></tr><tr class="passedodd"><td><a href="#m6">test01_EmailAddress</a></td><td rowspan="1">1574071195301</td><td rowspan="1">185</td></tr><tr class="passedodd"><td><a href="#m7">test02_AppendText</a></td><td rowspan="1">1574071195491</td><td rowspan="1">198</td></tr><tr class="passedodd"><td><a href="#m8">test03_GetText</a></td><td rowspan="1">1574071195691</td><td rowspan="1">48</td></tr><tr class="passedodd"><td><a href="#m9">test04_ClearMe</a></td><td rowspan="3">1574071195913</td><td rowspan="3">126</td></tr><tr class="passedodd"><td><a href="#m10">test04_ClearMe</a></td></tr><tr class="passedodd"><td><a href="#m11">test04_ClearMe</a></td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Check Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestCases.EditPage_Test</td><td><a href="#m12">Navi_ClickEdit</a></td><td rowspan="1">1574071196493</td><td rowspan="1">300</td></tr><tr class="passedeven"><td><a href="#m13">test05_DisabledCheck</a></td><td rowspan="1">1574071196795</td><td rowspan="1">3080</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Failed suite [TestLeafSuite]</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestCases(failed) &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">TestCases.HyperLinkPage_Test</td><td><a href="#m0">Test12_VerifyBrokenLink</a></td><td rowspan="1">1574169186379</td><td rowspan="1">21095</td></tr><tr><th colspan="4">TestCases(failed) &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestCases.HyperLinkPage_Test</td><td><a href="#m1">Navi_ClickLink</a></td><td rowspan="1">1574169185630</td><td rowspan="1">741</td></tr></tbody>
 </table>
-<h2>TestCases</h2><h3 id="m0">TestCases.ButtonPage_Test#Navi_ClickButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestCases.ButtonPage_Test#Test07_CheckGotoHomeButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestCases.ButtonPage_Test#Test08_GetPosition</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TestCases.ButtonPage_Test#Test09_GetColor</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">TestCases.ButtonPage_Test#Test10_GetSize</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">TestCases.EditPage_Test#Navi_ClickEdit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">TestCases.EditPage_Test#test01_EmailAddress</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>as198184@gmail.com</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">TestCases.EditPage_Test#test02_AppendText</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>-Text-&gt;</td><td>-Appended-&gt;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">TestCases.EditPage_Test#test03_GetText</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">TestCases.EditPage_Test#test04_ClearMe</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Divya</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">TestCases.EditPage_Test#test04_ClearMe</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Adhi</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">TestCases.EditPage_Test#test04_ClearMe</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Ashok</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Check Test</h2><h3 id="m12">TestCases.EditPage_Test#Navi_ClickEdit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">TestCases.EditPage_Test#test05_DisabledCheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestCases(failed)</h2><h3 id="m0">TestCases.HyperLinkPage_Test#Test12_VerifyBrokenLink</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.net.ConnectException: Connection timed out: connect
+	at java.net.DualStackPlainSocketImpl.connect0(Native Method)
+	at java.net.DualStackPlainSocketImpl.socketConnect(Unknown Source)
+	at java.net.AbstractPlainSocketImpl.doConnect(Unknown Source)
+	at java.net.AbstractPlainSocketImpl.connectToAddress(Unknown Source)
+	at java.net.AbstractPlainSocketImpl.connect(Unknown Source)
+	at java.net.PlainSocketImpl.connect(Unknown Source)
+	at java.net.SocksSocketImpl.connect(Unknown Source)
+	at java.net.Socket.connect(Unknown Source)
+	at java.net.Socket.connect(Unknown Source)
+	at sun.net.NetworkClient.doConnect(Unknown Source)
+	at sun.net.www.http.HttpClient.openServer(Unknown Source)
+	at sun.net.www.http.HttpClient.openServer(Unknown Source)
+	at sun.net.www.http.HttpClient.&lt;init&gt;(Unknown Source)
+	at sun.net.www.http.HttpClient.New(Unknown Source)
+	at sun.net.www.http.HttpClient.New(Unknown Source)
+	at sun.net.www.protocol.http.HttpURLConnection.getNewHttpClient(Unknown Source)
+	at sun.net.www.protocol.http.HttpURLConnection.plainConnect0(Unknown Source)
+	at sun.net.www.protocol.http.HttpURLConnection.plainConnect(Unknown Source)
+	at sun.net.www.protocol.http.HttpURLConnection.connect(Unknown Source)
+	at TestCases.HyperLinkPage_Test.Test12_VerifyBrokenLink(HyperLinkPage_Test.java:41)
+	at java.util.ArrayList.forEach(Unknown Source)
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestCases.HyperLinkPage_Test#Navi_ClickLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
