--- a/com.TestLeaf/test-output/old/TestLeafSuite/methods-alphabetical.html
+++ b/com.TestLeaf/test-output/old/TestLeafSuite/methods-alphabetical.html
@@ -1,16 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestLeafSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6694f1">  <td>19/11/17 21:24:10</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">&gt;&gt;InitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="6694f1">  <td>19/11/17 21:24:20</td>   <td>9773</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="85a3ee">  <td>19/11/17 21:24:26</td>   <td>16074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Guru99Bank_LoginPage_Test.Login_Guru99Bank_ValidCheck(java.lang.String, java.lang.String)[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">Login_Guru99Bank_ValidCheck</td> 
-  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="85a3ee">  <td>19/11/17 21:24:28</td>   <td>18323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Guru99Bank_LoginPage_Test.Login_Guru99Bank_ValidCheck(java.lang.String, java.lang.String)[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">Login_Guru99Bank_ValidCheck</td> 
-  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="85a3ee">  <td>19/11/17 21:24:33</td>   <td>22384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Guru99Bank_LoginPage_Test.Login_Guru99Bank_ValidCheck(java.lang.String, java.lang.String)[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">Login_Guru99Bank_ValidCheck</td> 
-  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="6694f1">  <td>19/11/17 21:24:37</td>   <td>27200</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601008104</td>   <td></td> </tr>
+<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:40</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">&gt;&gt;InitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:48</td>   <td>7423</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:53</td>   <td>13259</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.EditPage_Test@5427c60c]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:58</td>   <td>18051</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.HyperLinkPage_Test@15bfd87]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>12397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Navi_ClickButton()[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">Navi_ClickButton</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:54</td>   <td>13443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.Navi_ClickEdit()[pri:0, instance:TestCases.EditPage_Test@5427c60c]">Navi_ClickEdit</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="8a8f7c">  <td>19/11/19 18:41:58</td>   <td>18259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@15bfd87]">Navi_ClickLink</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test07_CheckGotoHomeButton()[pri:4, instance:TestCases.ButtonPage_Test@7dc222ae]">Test07_CheckGotoHomeButton</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test08_GetPosition()[pri:2, instance:TestCases.ButtonPage_Test@7dc222ae]">Test08_GetPosition</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test09_GetColor()[pri:3, instance:TestCases.ButtonPage_Test@7dc222ae]">Test09_GetColor</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test10_GetSize()[pri:1, instance:TestCases.ButtonPage_Test@7dc222ae]">Test10_GetSize</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="8a8f7c">  <td>19/11/19 18:41:59</td>   <td>18669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test11_FindDestination()[pri:1, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test11_FindDestination</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="8a8f7c">  <td>19/11/19 18:42:20</td>   <td>39820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_GotoHomePage1()[pri:3, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test12_GotoHomePage1</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="8a8f7c">  <td>19/11/19 18:41:59</td>   <td>18757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test12_VerifyBrokenLink</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="8a8f7c">  <td>19/11/19 18:42:27</td>   <td>46706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test14_CountLink()[pri:3, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test14_CountLink</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="bc8ab5">  <td>19/11/19 18:42:27</td>   <td>46861</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:54</td>   <td>13968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test01_EmailAddress(java.lang.String)[pri:1, instance:TestCases.EditPage_Test@5427c60c]">test01_EmailAddress</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:54</td>   <td>14187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test02_AppendText(java.lang.String, java.lang.String)[pri:2, instance:TestCases.EditPage_Test@5427c60c]">test02_AppendText</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test03_GetText()[pri:3, instance:TestCases.EditPage_Test@5427c60c]">test03_GetText</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@5427c60c]">test04_ClearMe</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@5427c60c]">test04_ClearMe</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@5427c60c]">test04_ClearMe</td> 
+  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test05_DisabledCheck()[pri:5, instance:TestCases.EditPage_Test@5427c60c]">test05_DisabledCheck</td> 
+  <td>main@673186785</td>   <td></td> </tr>
 </table>
