--- a/com.TestLeaf/test-output/old/TestLeafSuite/methods-not-run.html
+++ b/com.TestLeaf/test-output/old/TestLeafSuite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TestCases.TestBase.quitDriver</td></tr>
+<tr><td>TestCases.TestBase.quitDriver</td></tr>
+<tr><td>TestCases.TestBase.InitDriver</td></tr>
+<tr><td>TestCases.TestBase.InitDriver</td></tr>
 </table>
