--- a/com.TestLeaf/test-output/old/TestLeafSuite/classes.html
+++ b/com.TestLeaf/test-output/old/TestLeafSuite/classes.html
@@ -4,18 +4,142 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCases.Guru99Bank_LoginPage_Test</td>
+<td>TestCases.HyperLinkPage_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_Guru99Bank_ValidCheck</td>
-<td>&nbsp;</td></tr>
+<td>Test11_FindDestination</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test12_GotoHomePage1</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test12_VerifyBrokenLink</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test14_CountLink</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Navi_ClickLink</td>
+<td>Home Link </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>LaunchAppURL</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>TestCases.ButtonPage_Test</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test07_CheckGotoHomeButton</td>
+<td>Button </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Navi_ClickButton</td>
+<td>Button Home </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test09_GetColor</td>
+<td>Button </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test08_GetPosition</td>
+<td>Button </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test10_GetSize</td>
+<td>Button </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LaunchAppURL</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>TestCases.EditPage_Test</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test02_AppendText</td>
+<td>Edit </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test04_ClearMe</td>
+<td>Edit </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test01_EmailAddress</td>
+<td>Edit </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test03_GetText</td>
+<td>Edit </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Navi_ClickEdit</td>
+<td>Check Edit Home </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test05_DisabledCheck</td>
+<td>Check </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LaunchAppURL</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
