--- a/com.TestLeaf/test-output/old/TestLeafSuite/methods.html
+++ b/com.TestLeaf/test-output/old/TestLeafSuite/methods.html
@@ -1,50 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestLeafSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:40</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">&gt;&gt;InitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:48</td>   <td>7423</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>12397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Navi_ClickButton()[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">Navi_ClickButton</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test10_GetSize()[pri:1, instance:TestCases.ButtonPage_Test@7dc222ae]">Test10_GetSize</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test08_GetPosition()[pri:2, instance:TestCases.ButtonPage_Test@7dc222ae]">Test08_GetPosition</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test09_GetColor()[pri:3, instance:TestCases.ButtonPage_Test@7dc222ae]">Test09_GetColor</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="79bbc3">  <td>19/11/19 18:41:53</td>   <td>13164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test07_CheckGotoHomeButton()[pri:4, instance:TestCases.ButtonPage_Test@7dc222ae]">Test07_CheckGotoHomeButton</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:53</td>   <td>13259</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.EditPage_Test@5427c60c]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:54</td>   <td>13443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.Navi_ClickEdit()[pri:0, instance:TestCases.EditPage_Test@5427c60c]">Navi_ClickEdit</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:54</td>   <td>13968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test01_EmailAddress(java.lang.String)[pri:1, instance:TestCases.EditPage_Test@5427c60c]">test01_EmailAddress</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:54</td>   <td>14187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test02_AppendText(java.lang.String, java.lang.String)[pri:2, instance:TestCases.EditPage_Test@5427c60c]">test02_AppendText</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test03_GetText()[pri:3, instance:TestCases.EditPage_Test@5427c60c]">test03_GetText</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@5427c60c]">test04_ClearMe</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@5427c60c]">test04_ClearMe</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@5427c60c]">test04_ClearMe</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="e2adc7">  <td>19/11/19 18:41:55</td>   <td>14933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test05_DisabledCheck()[pri:5, instance:TestCases.EditPage_Test@5427c60c]">test05_DisabledCheck</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="bc8ab5">  <td>19/11/19 18:41:58</td>   <td>18051</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.HyperLinkPage_Test@15bfd87]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="8a8f7c">  <td>19/11/19 18:41:58</td>   <td>18259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@15bfd87]">Navi_ClickLink</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="8a8f7c">  <td>19/11/19 18:41:59</td>   <td>18669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test11_FindDestination()[pri:1, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test11_FindDestination</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="8a8f7c">  <td>19/11/19 18:41:59</td>   <td>18757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test12_VerifyBrokenLink</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="8a8f7c">  <td>19/11/19 18:42:20</td>   <td>39820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_GotoHomePage1()[pri:3, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test12_GotoHomePage1</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="8a8f7c">  <td>19/11/19 18:42:27</td>   <td>46706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test14_CountLink()[pri:3, instance:TestCases.HyperLinkPage_Test@15bfd87]">Test14_CountLink</td> 
-  <td>main@673186785</td>   <td></td> </tr>
-<tr bgcolor="bc8ab5">  <td>19/11/19 18:42:27</td>   <td>46861</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.ButtonPage_Test@7dc222ae]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@673186785</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>19/11/20 12:39:29</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">&gt;&gt;InitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>19/11/20 12:39:38</td>   <td>8915</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>13327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Navi_ClickButton()[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">Navi_ClickButton</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>13976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test10_GetSize()[pri:1, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test10_GetSize</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>14055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test08_GetPosition()[pri:2, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test08_GetPosition</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>14118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test09_GetColor()[pri:3, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test09_GetColor</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a46df3">  <td>19/11/20 12:39:44</td>   <td>14212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test07_CheckGotoHomeButton()[pri:4, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test07_CheckGotoHomeButton</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>19/11/20 12:39:44</td>   <td>14764</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.EditPage_Test@b9afc07]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:44</td>   <td>15000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.Navi_ClickEdit()[pri:0, instance:TestCases.EditPage_Test@b9afc07]">Navi_ClickEdit</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test01_EmailAddress(java.lang.String)[pri:1, instance:TestCases.EditPage_Test@b9afc07]">test01_EmailAddress</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test02_AppendText(java.lang.String, java.lang.String)[pri:2, instance:TestCases.EditPage_Test@b9afc07]">test02_AppendText</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test03_GetText()[pri:3, instance:TestCases.EditPage_Test@b9afc07]">test03_GetText</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@b9afc07]">test04_ClearMe</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>16108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@b9afc07]">test04_ClearMe</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:46</td>   <td>16236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@b9afc07]">test04_ClearMe</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="eaafa6">  <td>19/11/20 12:39:46</td>   <td>16356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test05_DisabledCheck()[pri:5, instance:TestCases.EditPage_Test@b9afc07]">test05_DisabledCheck</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>19/11/20 12:39:49</td>   <td>19450</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.HyperLinkPage_Test@382db087]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:39:49</td>   <td>19702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@382db087]">Navi_ClickLink</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:39:50</td>   <td>20258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test11_FindDestination()[pri:1, instance:TestCases.HyperLinkPage_Test@382db087]">Test11_FindDestination</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:39:50</td>   <td>20334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:40:11</td>   <td>41416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:40:32</td>   <td>62484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:40:53</td>   <td>83535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:41:14</td>   <td>104594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:41:35</td>   <td>125641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_GotoHomePage1()[pri:3, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_GotoHomePage1</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="a3e297">  <td>19/11/20 12:41:42</td>   <td>132896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test14_CountLink()[pri:3, instance:TestCases.HyperLinkPage_Test@382db087]">Test14_CountLink</td> 
+  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>19/11/20 12:41:43</td>   <td>133183</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
 </table>
