--- a/com.TestLeaf/test-output/old/Default suite/classes.html
+++ b/com.TestLeaf/test-output/old/Default suite/classes.html
@@ -4,18 +4,43 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestCases.Guru99Bank_LoginPage_Test</td>
+<td>TestCases.HyperLinkPage_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_Guru99Bank_ValidCheck</td>
-<td>&nbsp;</td></tr>
+<td>Test12_GotoHomePage1</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test11_FindDestination</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test12_VerifyBrokenLink</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Test14_CountLink</td>
+<td>Link </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Navi_ClickLink</td>
+<td>Home Link </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>LaunchAppURL</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
