--- a/com.TestLeaf/test-output/old/Default suite/groups.html
+++ b/com.TestLeaf/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Home</td><td>HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@543788f3]<br/></td></tr>
+<tr><td>Link</td><td>HyperLinkPage_Test.Test11_FindDestination()[pri:1, instance:TestCases.HyperLinkPage_Test@543788f3]<br/>HyperLinkPage_Test.Test12_GotoHomePage1()[pri:3, instance:TestCases.HyperLinkPage_Test@543788f3]<br/>HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@543788f3]<br/>HyperLinkPage_Test.Test14_CountLink()[pri:3, instance:TestCases.HyperLinkPage_Test@543788f3]<br/>HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@543788f3]<br/></td></tr>
+</table>
