--- a/com.TestLeaf/test-output/old/Default suite/methods.html
+++ b/com.TestLeaf/test-output/old/Default suite/methods.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6694f1">  <td>19/11/17 20:50:44</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">&gt;&gt;InitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="6694f1">  <td>19/11/17 20:51:01</td>   <td>16450</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="85a3ee">  <td>19/11/17 20:51:06</td>   <td>22117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Guru99Bank_LoginPage_Test.Login_Guru99Bank_ValidCheck(java.lang.String, java.lang.String)[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">Login_Guru99Bank_ValidCheck</td> 
-  <td>main@601008104</td>   <td></td> </tr>
-<tr bgcolor="6694f1">  <td>19/11/17 20:51:37</td>   <td>52832</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.Guru99Bank_LoginPage_Test@76f2b07d]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601008104</td>   <td></td> </tr>
+<tr bgcolor="d2fa64">  <td>19/11/21 15:25:21</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.HyperLinkPage_Test@543788f3]">&gt;&gt;InitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124407148</td>   <td></td> </tr>
+<tr bgcolor="d2fa64">  <td>19/11/21 15:25:21</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.HyperLinkPage_Test@543788f3]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124407148</td>   <td></td> </tr>
+<tr bgcolor="b1ffe6">  <td>19/11/21 15:25:21</td>   <td>84</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@543788f3]">Navi_ClickLink</td> 
+  <td>main@124407148</td>   <td></td> </tr>
+<tr bgcolor="b1ffe6">  <td>19/11/21 15:25:21</td>   <td>105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test11_FindDestination()[pri:1, instance:TestCases.HyperLinkPage_Test@543788f3]">Test11_FindDestination</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="b1ffe6">  <td>19/11/21 15:25:21</td>   <td>111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@543788f3]">Test12_VerifyBrokenLink</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="b1ffe6">  <td>19/11/21 15:25:21</td>   <td>119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_GotoHomePage1()[pri:3, instance:TestCases.HyperLinkPage_Test@543788f3]">Test12_GotoHomePage1</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="b1ffe6">  <td>19/11/21 15:25:21</td>   <td>136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test14_CountLink()[pri:3, instance:TestCases.HyperLinkPage_Test@543788f3]">Test14_CountLink</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="d2fa64">  <td>19/11/21 15:25:21</td>   <td>222</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.HyperLinkPage_Test@543788f3]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124407148</td>   <td></td> </tr>
 </table>
