--- a/com.TestLeaf/test-output/old/TestLeafSuite/methods.html
+++ b/com.TestLeaf/test-output/old/TestLeafSuite/methods.html
@@ -1,58 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestLeafSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c285f4">  <td>19/11/20 12:39:29</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">&gt;&gt;InitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>19/11/20 12:39:38</td>   <td>8915</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>13327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Navi_ClickButton()[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">Navi_ClickButton</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>13976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test10_GetSize()[pri:1, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test10_GetSize</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>14055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test08_GetPosition()[pri:2, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test08_GetPosition</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a46df3">  <td>19/11/20 12:39:43</td>   <td>14118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test09_GetColor()[pri:3, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test09_GetColor</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a46df3">  <td>19/11/20 12:39:44</td>   <td>14212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test07_CheckGotoHomeButton()[pri:4, instance:TestCases.ButtonPage_Test@4bb4de6a]">Test07_CheckGotoHomeButton</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>19/11/20 12:39:44</td>   <td>14764</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.EditPage_Test@b9afc07]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:44</td>   <td>15000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.Navi_ClickEdit()[pri:0, instance:TestCases.EditPage_Test@b9afc07]">Navi_ClickEdit</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test01_EmailAddress(java.lang.String)[pri:1, instance:TestCases.EditPage_Test@b9afc07]">test01_EmailAddress</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test02_AppendText(java.lang.String, java.lang.String)[pri:2, instance:TestCases.EditPage_Test@b9afc07]">test02_AppendText</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test03_GetText()[pri:3, instance:TestCases.EditPage_Test@b9afc07]">test03_GetText</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>15954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@b9afc07]">test04_ClearMe</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:45</td>   <td>16108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@b9afc07]">test04_ClearMe</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:46</td>   <td>16236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@b9afc07]">test04_ClearMe</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="eaafa6">  <td>19/11/20 12:39:46</td>   <td>16356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test05_DisabledCheck()[pri:5, instance:TestCases.EditPage_Test@b9afc07]">test05_DisabledCheck</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>19/11/20 12:39:49</td>   <td>19450</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.HyperLinkPage_Test@382db087]">&gt;&gt;LaunchAppURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:39:49</td>   <td>19702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@382db087]">Navi_ClickLink</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:39:50</td>   <td>20258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test11_FindDestination()[pri:1, instance:TestCases.HyperLinkPage_Test@382db087]">Test11_FindDestination</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:39:50</td>   <td>20334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:40:11</td>   <td>41416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:40:32</td>   <td>62484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:40:53</td>   <td>83535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:41:14</td>   <td>104594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_VerifyBrokenLink</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:41:35</td>   <td>125641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_GotoHomePage1()[pri:3, instance:TestCases.HyperLinkPage_Test@382db087]">Test12_GotoHomePage1</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="a3e297">  <td>19/11/20 12:41:42</td>   <td>132896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test14_CountLink()[pri:3, instance:TestCases.HyperLinkPage_Test@382db087]">Test14_CountLink</td> 
-  <td>main@297927961</td>   <td></td> </tr>
-<tr bgcolor="c285f4">  <td>19/11/20 12:41:43</td>   <td>133183</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.ButtonPage_Test@4bb4de6a]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@297927961</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/11/21 18:13:54</td>   <td>0</td> <td title="&gt;&gt;TestBase.InitDriver()[pri:0, instance:TestCases.ButtonPage_Test@8b87145]">&gt;&gt;InitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/11/21 18:14:04</td>   <td>9285</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.ButtonPage_Test@8b87145]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="d9d094">  <td>19/11/21 18:14:07</td>   <td>12933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Navi_ClickButton()[pri:0, instance:TestCases.ButtonPage_Test@8b87145]">Navi_ClickButton</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="d9d094">  <td>19/11/21 18:14:08</td>   <td>13648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test10_GetSize()[pri:1, instance:TestCases.ButtonPage_Test@8b87145]">Test10_GetSize</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="d9d094">  <td>19/11/21 18:14:08</td>   <td>13715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test08_GetPosition()[pri:2, instance:TestCases.ButtonPage_Test@8b87145]">Test08_GetPosition</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="d9d094">  <td>19/11/21 18:14:08</td>   <td>13788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test09_GetColor()[pri:3, instance:TestCases.ButtonPage_Test@8b87145]">Test09_GetColor</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="d9d094">  <td>19/11/21 18:14:08</td>   <td>13832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ButtonPage_Test.Test07_CheckGotoHomeButton()[pri:4, instance:TestCases.ButtonPage_Test@8b87145]">Test07_CheckGotoHomeButton</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/11/21 18:14:08</td>   <td>14106</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.EditPage_Test@57f23557]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:09</td>   <td>14282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.Navi_ClickEdit()[pri:0, instance:TestCases.EditPage_Test@57f23557]">Navi_ClickEdit</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:09</td>   <td>14602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test01_EmailAddress(java.lang.String)[pri:1, instance:TestCases.EditPage_Test@57f23557]">test01_EmailAddress</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:09</td>   <td>14797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test02_AppendText(java.lang.String, java.lang.String)[pri:2, instance:TestCases.EditPage_Test@57f23557]">test02_AppendText</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:09</td>   <td>14994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test03_GetText()[pri:3, instance:TestCases.EditPage_Test@57f23557]">test03_GetText</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:09</td>   <td>15047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@57f23557]">test04_ClearMe</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:09</td>   <td>15201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@57f23557]">test04_ClearMe</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:10</td>   <td>15329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test04_ClearMe(java.lang.String)[pri:4, instance:TestCases.EditPage_Test@57f23557]">test04_ClearMe</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="81c9d6">  <td>19/11/21 18:14:10</td>   <td>15455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditPage_Test.test05_DisabledCheck()[pri:5, instance:TestCases.EditPage_Test@57f23557]">test05_DisabledCheck</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/11/21 18:14:13</td>   <td>18554</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchAppURL(java.lang.String)[pri:0, instance:TestCases.HyperLinkPage_Test@3d0f8e03]">&gt;&gt;LaunchAppURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="7f989f">  <td>19/11/21 18:14:13</td>   <td>18788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Navi_ClickLink()[pri:0, instance:TestCases.HyperLinkPage_Test@3d0f8e03]">Navi_ClickLink</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="7f989f">  <td>19/11/21 18:14:13</td>   <td>19176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test11_FindDestination()[pri:1, instance:TestCases.HyperLinkPage_Test@3d0f8e03]">Test11_FindDestination</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="7f989f">  <td>19/11/21 18:14:14</td>   <td>19259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_VerifyBrokenLink()[pri:2, instance:TestCases.HyperLinkPage_Test@3d0f8e03]">Test12_VerifyBrokenLink</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="7f989f">  <td>19/11/21 18:14:14</td>   <td>19665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test12_GotoHomePage1()[pri:3, instance:TestCases.HyperLinkPage_Test@3d0f8e03]">Test12_GotoHomePage1</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="7f989f">  <td>19/11/21 18:14:21</td>   <td>26672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HyperLinkPage_Test.Test14_CountLink()[pri:4, instance:TestCases.HyperLinkPage_Test@3d0f8e03]">Test14_CountLink</td> 
+  <td>main@1095293768</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/11/21 18:14:21</td>   <td>26906</td> <td title="&lt;&lt;TestBase.quitDriver()[pri:0, instance:TestCases.ButtonPage_Test@8b87145]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095293768</td>   <td></td> </tr>
 </table>
